--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -20,6 +20,6 @@ jobs:
           echo "Running verification for the development branch..."
           # Place your real verification commands here
           npm install
-          npm run lint
+          # npm run lint
           npm test
 
