add email sending

--- a/.env_example
+++ b/.env_example
@@ -1,1 +1,15 @@
 PORT= Your  port (300 or 4000 )
+
+# Database
+MONGO_URI=mongodb://localhost:27017/towing
+JWT_SECRET=supersecretkey
+
+# Email
+
+EMAIL_USER=yourgmail@gmail.com
+EMAIL_PASS=yourapppassword
+
+# Twilio
+TWILIO_SID=your_sid
+TWILIO_AUTH=your_auth_token
+TWILIO_PHONE=+1234567890
