--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "nodemon": "^2.0.22"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.1",
+    "nodemailer": "^7.0.5",
+    "nodemon": "^2.0.22",
+    "twilio": "^5.8.0"
   }
 }
