--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.17.1",
     "nodemailer": "^7.0.5",
     "nodemon": "^2.0.22",
+    "socket.io": "^4.8.1",
     "twilio": "^5.8.0"
   }
 }
